--- a/components/Projects/Projects.module.scss
+++ b/components/Projects/Projects.module.scss
@@ -1,6 +1,7 @@
 .project {
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 
   .projectsContainer {
     display: grid;
