--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -112,7 +112,7 @@ $fillColor: #6c63ff;
           width: 75%;
           border: 1px solid;
           transition: all 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-          margin-bottom: .5rem;
+          margin-bottom: 0.5rem;
 
           &:last-child {
             margin-bottom: 0;
@@ -149,7 +149,6 @@ $fillColor: #6c63ff;
         align-content: center;
         grid-gap: 0.5rem;
         transition: all 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-        // z-index: 7;
       }
 
       .link {
@@ -204,16 +203,11 @@ $fillColor: #6c63ff;
           padding: 0;
           margin: 0;
           z-index: 13;
-          // transform: scaleX(2.5);
           opacity: 0;
           cursor: pointer;
 
           &:checked ~ .themeToggle::after {
-            right: 0;
-          }
-
-          &:checked ~ .themeToggle {
-            background: rgb(70, 68, 68);
+            right: 2px;
           }
         }
 
@@ -221,39 +215,34 @@ $fillColor: #6c63ff;
           position: relative;
           display: flex;
           justify-content: space-between;
-          width: 4.5rem;
-          height: 1.7rem;
-          border: 1px solid;
-          border-radius: 15px;
+          padding: 0 0.5em;
+          align-items: center;
+          width: 4rem;
+          height: 2rem;
+          box-shadow: 0 0 2px black;
+          border-radius: 20px;
           overflow: hidden;
-          background: rgb(247, 240, 240);
-          transition: background .1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-          transition-delay: .1s;
+          background: rgb(32, 32, 32);
+          transition: background 0.1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+          transition-delay: 0.1s;
 
-          @media all and (max-width: 768px) {
-            width: 5rem;
-            height: 2rem;
-            border-radius: 10px;
+          .modeIcon {
+            font-size: 1.05rem;
           }
 
           &::after {
             content: '';
             position: absolute;
             top: 0;
-            right: calc(5rem - 2.75rem);
-            width: 2.1rem;
-            height: inherit;
-            border-radius: inherit;
-            border: 0;
-            outline: none;
+            right: calc(50% + 2px);
+            width: calc(50% - 4px);
+            height: calc(100% - 4px);
+            border-radius: 50%;
             background: rgb(43, 40, 40);
             transition: all 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-            box-shadow: 1px 0px 2px rgb(0, 0, 0), -1px 0px 2px rgb(0, 0, 0);
-
-            @media all and (max-width: 768px) {
-              width: 2.5rem;
-              right: calc(5rem - 2.6rem);
-            }
+            box-shadow: 0px 0px 2px rgb(0, 0, 0), inset 0 1.5px 2px black,
+              inset 0 -1.5px 2px black;
+            margin: 2px 0;
           }
         }
       }
