--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,7 +10,6 @@ $fillColor: #6c63ff;
 
 html,
 body {
-  overflow-x: hidden;
   padding: 0;
   margin: 0;
   font-family: 'Poppins', Calibri, sans-serif;
